# pgm-manipulator-gui

./: Makefile.in  aclocal.m4  configure  configure.ac
src/: Makefile.am  Makefile.in  graphic.c  graphic.h  main.c  pgm_manipulator_gui.ui
